# car-price-prediction-mlops

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
price_prediction/: __init__.py  dataset.py  features.py  plots.py
price_prediction/modeling/: predict.py  train.py
